# wapi

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  DNS-PROVIDERS.md  README.md  package.json  pnpm-lock.yaml
.github/workflow/: ci-cd.yaml
.trunk/: trunk.yaml
.trunk/configs/: .markdownlint.yaml  .prettierrc  .rustfmt.toml  .yamllint.yaml  cspell.yaml
src/: lib.rs  main.rs
src/api/: cache.rs  mod.rs
src/error/: api.rs  mod.rs
src/utils/: mod.rs
